🐛 Fix content container spacings

--- a/frontend21/scss/components/content.scss
+++ b/frontend21/scss/components/content.scss
@@ -1,6 +1,7 @@
 .#{prefix(null, 'content')} {
   grid-column: 4 / 12;
   margin-top: 25px;
+  margin-bottom: 55px;
   position: relative;
   width: 100%;
   padding: 60px;
