--- a/frontend21/scss/components/sidebar.scss
+++ b/frontend21/scss/components/sidebar.scss
@@ -6,6 +6,7 @@
   width: 0;
   max-height: calc(100vh - 110px);
   margin-top: 35px;
+  margin-bottom: 55px;
 
   &.--sidebaropen {
     width: auto;
